testsuite/tests/checks/global_variables_basic/test.out
foo.ads:3:5: error: global variable
3 |     Var1 : Integer;                  --  FLAG
  |     ^^^^ 

foo.ads:6:5: error: global variable
6 |     Var2 : Boolean;                  --  FLAG
  |     ^^^^ 

